@@ -22,7 +22,9 @@
 #include <Nux/Nux.h>
 #include <glib.h>
 #include <boost/noncopyable.hpp>
-#include <memory>
+#include <boost/shared_ptr.hpp>
+#include <boost/enable_shared_from_this.hpp>
+#include <boost/weak_ptr.hpp>
 
 #include "unity-mt-grab-handle.h"
 
@@ -36,7 +38,7 @@ class GrabHandle::ImplFactory
 
     virtual ~ImplFactory() {};
 
-    static std::shared_ptr <ImplFactory>
+    static boost::shared_ptr <ImplFactory>
     Default();
 
     static void
@@ -46,7 +48,7 @@ class GrabHandle::ImplFactory
 
   protected:
 
-    static std::shared_ptr <ImplFactory> mDefault;
+    static boost::shared_ptr <ImplFactory> mDefault;
 
     ImplFactory() {};
 };
